fixed collapsing issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -54,6 +54,7 @@ body {
 img {
   display: block;
   width: 100%;
+  height: auto;
 }
 
 h1,
@@ -267,11 +268,13 @@ a:focus {
   height: 300px; */
   perspective: 1000px;
   min-height: 180px;
-  flex: 1 1 auto;
+  flex: 1 1 300px;
+  aspect-ratio: 1/1;
 }
 
 .card-container {
   display: flex;
+  flex-direction: column;
   flex-wrap: nowrap;
   gap: 1rem;
 }
@@ -282,13 +285,14 @@ a:focus {
   width: 100%;
   height: 100%;
   /* text-align: left; */
-  transition: transform 0.8s;
+  transition: transform 0.6s 0.3s;
   transform-style: preserve-3d;
 }
 
 /*horizontal flip*/
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
+  transition: transform 0.8s;
 }
 
 /* Positioning */
@@ -297,6 +301,7 @@ a:focus {
   position: absolute;
   width: 100%;
   height: 100%;
+  display: block;
   -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
 }
@@ -357,6 +362,24 @@ a:focus {
   }
 }
 
+@media (min-width: 500px) {
+  .card-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .card-container {
+    flex: 1 1 40%;
+  }
+}
+
+@media (min-width: 900px) {
+  .card-container {
+    /* flex: 1 1 20%; */
+    flex-wrap: nowrap;
+  }
+}
+
 /* >1100 */
 @media (min-width: 1101px) {
   .text-group h1 {
@@ -376,21 +399,5 @@ a:focus {
     bottom: 0;
     text-align: start;
     margin: 1.5rem;
-  }
-}
-@media (min-width: 800px) {
-  .card-container {
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-
-  .card-container {
-    flex: 1 1 40%;
-  }
-}
-
-@media (min-width: 850px) {
-  .card-container {
-    flex: 1 1 20%;
   }
 }
